# AudioHub

Server/: AudioHub.sln
Server/AudioHub/: AudioHub.vcxproj  AudioHub.vcxproj.filters  CMakeLists.txt
Server/AudioHub/src/: AudioPacket.cpp  AudioPacket.h  JSONUtils.cpp  JSONUtils.h  Server.cpp  Server.h  Session.cpp  Session.h  SimpleWSinclude.h  SpeakerStream.cpp  SpeakerStream.h  StreamPacket.cpp  StreamPacket.h  Types.h  Utils.h  WSUser.cpp  WSUser.h  defines.h  main.cpp
Server/AudioHub/src/WSHandlers/: IWSHandler.cpp  IWSHandler.h  WSHException.cpp  WSHException.h  WSH_broadcast.cpp  WSH_broadcast.h  WSH_chsession.cpp  WSH_chsession.h  WSH_forward.cpp  WSH_forward.h  WSH_gate.cpp  WSH_gate.h  WSH_login.cpp  WSH_login.h  WSH_logout.cpp  WSH_logout.h  WSH_querysession.cpp  WSH_querysession.h  WSH_rebuffer.cpp  WSH_rebuffer.h  WSH_volume.cpp  WSH_volume.h  WSHandlerMgr.cpp  WSHandlerMgr.h
Server/TypeScript/: AudioHubLib.ts
Server/TypeScript/js/: AudioHubLib.js  IndexApp.js
TypeScriptClient/: IndexApp.ts  index.html  tsconfig.json
UnityProject/: .gitignore
UnityProject/Assets/Plugins/: WebSocket.cs
UnityProject/Assets/Plugins/AudioHubStreaming/: AudioHubPlayback.jslib
UnityProject/Assets/Plugins/websocket-sharp/Net/: HttpListenerResponse.cs  ResponseStream.cs
UnityProject/Assets/Scenes/: SampleScene.unity
UnityProject/Assets/Scripts/: ClientTester.cs
UnityProject/Assets/Scripts/AudioHub/: AudioHub.cs
UnityProject/Assets/Scripts/AudioHub/HubMsgs/: HubMsgError.cs  HubMsgEvtBroadcast.cs  HubMsgEvtDisconnected.cs  IHubMsg.cs  (+11 more)
UnityProject/ProjectSettings/: ProjectSettings.asset
(+3 files in other folders)
